--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
       </section>
 
       <section class="section-meals">
-        <div class="container">
+        <div class="container center-text">
           <span class="sub-heading">Meals</span>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ recipes
           </h2>
         </div>
 
-        <div class="container grid grid-3cols">
+        <div class="container grid grid-3cols margin-bottom-md">
           <div class="meal">
             <img
               class="meal-img"
-              src="/content/img/meals/meal-1.jpg"
+              src="content/img/meals/meal-1.jpg"
               alt="Japanese Gyozas"
             />
 
@@ -242,7 +242,7 @@
           <div class="meal">
             <img
               class="meal-img"
-              src="/content/img/meals/meal-2.jpg"
+              src="content/img/meals/meal-2.jpg"
               alt="Avocado Salad"
             />
 
@@ -278,7 +278,7 @@
 
           <div class="diets">
             <h3 class="heading-tertiary">Works with any diet:</h3>
-            <div class="list">
+            <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span> Vegetarian</span>
@@ -315,8 +315,12 @@
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span> Kid-friendly</span>
               </li>
-            </div>
+            </ul>
           </div>
+        </div>
+
+        <div class="container all-recipes">
+          <a href="#" class="link">See all recipes &rarr; </a>
         </div>
       </section>
     </main>
