Nav bar links fix

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       /></a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">Section 1</a></li>
-          <li><a class="main-nav-link" href="#">Section 2</a></li>
-          <li><a class="main-nav-link" href="#">Section 3</a></li>
-          <li><a class="main-nav-link" href="#">Section 4</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+          <li><a class="main-nav-link" href="#how-it-works">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#try-for-free">Try for free</a></li>
         </ul>
       </nav>
     </header>
@@ -127,7 +127,7 @@
         </div>
       </section>
 
-      <section class="section-how">
+      <section class="section-how" id="how-it-works">
         <div class="container">
           <span class="sub-heading">How it works</span>
           <h2 class="heading-secondary">
@@ -197,7 +197,7 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="sub-heading">Meals</span>
           <h2 class="heading-secondary">
@@ -325,7 +325,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section class="section-testimonials"id="testimonials">
         <div class="testimonials-container">
           <span class="sub-heading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -457,7 +457,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="sub-heading">Pricing</span>
           <h2 class="heading-secondary">
@@ -568,7 +568,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="try-for-free">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
