--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/queries.css" />
 
     <script
       defer
@@ -430,25 +431,25 @@
               alt="Photo of beatifully arranged food"
             />
           </figure>
-          <figure class="gallery-item">
+          <figure class="gallery-item gallery-remove-4">
             <img
               src="/content/img/gallery/gallery-9.jpg"
               alt="Photo of beatifully arranged food"
             />
           </figure>
-          <figure class="gallery-item">
+          <figure class="gallery-item gallery-remove-4">
             <img
               src="/content/img/gallery/gallery-10.jpg"
               alt="Photo of beatifully arranged food"
             />
           </figure>
-          <figure class="gallery-item">
+          <figure class="gallery-item gallery-remove-4 gallery-remove-2">
             <img
               src="/content/img/gallery/gallery-11.jpg"
               alt="Photo of beatifully arranged food"
             />
           </figure>
-          <figure class="gallery-item">
+          <figure class="gallery-item gallery-remove-4 gallery-remove-2">
             <img
               src="/content/img/gallery/gallery-12.jpg"
               alt="Photo of beatifully arranged food"
@@ -479,7 +480,7 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Order from 11am and 9pm</span>
+                <span>Order from 11am 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -515,7 +516,7 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Get access to latest recipes</span>
+                <span>Latest recipes</span>
               </li>
             </ul>
 
