--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
           <li><a class="main-nav-link nav-cta" href="#try-for-free">Try for free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+
     </header>
 
     <main>
@@ -110,20 +116,20 @@
         <div class="container">
           <h2 class="heading-featured-in">As featured in</h2>
           <div class="logos">
-            <img
+            <img class="logos-first3-mobile"
               src="/content/img/logos/techcrunch.png"
               alt="Techchrunch logo"
             />
-            <img
+            <img class="logos-first3-mobile"
               src="/content/img/logos/business-insider.png"
               alt="Business insider logo"
             />
-            <img
+            <img class="logos-first3-mobile"
               src="/content/img/logos/the-new-york-times.png"
               alt="The New York Times logo"
             />
-            <img src="/content//img/logos/forbes.png" alt="Forbes logo" />
-            <img src="/content/img/logos/usa-today.png" alt="USA today logo" />
+            <img class="logos-last2-mobile" src="/content//img/logos/forbes.png" alt="Forbes logo" />
+            <img class="logos-last2-mobile" src="/content/img/logos/usa-today.png" alt="USA today logo" />
           </div>
         </div>
       </section>
@@ -480,7 +486,7 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Order from 11am 9pm</span>
+                <span>Order 11am-9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -504,7 +510,7 @@
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span><strong>2</strong> meal per day</span>
+                <span><strong>2</strong> meals per day</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
