--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               alt="The New York Times logo"
             />
             <img class="logos-last2-mobile" src="/content//img/logos/forbes.png" alt="Forbes logo" />
-            <img class="logos-last2-mobile" src="/content/img/logos/usa-today.png" alt="USA today logo" />
+            <img class="logos-last2-mobile logos-last1-mobile" src="/content/img/logos/usa-today.png" alt="USA today logo" />
           </div>
         </div>
       </section>
@@ -167,7 +167,7 @@
           <div class="step-img-box">
             <img
               class="step-imgs"
-              src="content/img/app/app-screen-1.png"
+              src="content/img/app/app-screen-2.png"
               alt="iPhone app meal approving screen"
             />
           </div>
@@ -197,7 +197,7 @@
           <div class="step-img-box">
             <img
               class="step-imgs"
-              src="content/img/app/app-screen-1.png"
+              src="content/img/app/app-screen-3.png"
               alt="iPhone app delivery screen"
             />
           </div>
@@ -493,7 +493,7 @@
                 <span>Delivery is free</span>
               </li>
               <li class="list-item">
-                <ion-icon class="list-icon" name="close-outline"></ion-icon>
+                <ion-icon class="list-icon" name="close-outline"></ion-icon><span class="list-grayed-out">Latest recipes</span>
               </li>
             </ul>
             <div class="plan-sign-up">
