--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Omnifood</title>
+    <meta name="description" content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs">
+    <title>Omnifood - Never cook again</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +16,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/queries.css" />
+    <link rel="icon" href="content/img/favicon.png">
+    <link rel="icon" href="content/img/favicon.svg">
 
     <script
       defer
@@ -25,9 +29,15 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+
+    <script
+    defer
+    src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+  ></script>
+    <script defer src="js/script.js"></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header sticky">
       <a href="#">
         <img
           src="content/img/omnifood-logo.png"
@@ -103,11 +113,15 @@
           </div>
 
           <div class="hero-img-box">
-            <img
-              src="content/img/hero.png"
-              alt="Woman enjoying food, meals in storage container, and food bowls on a table"
-              class="hero-img"
-            />
+            <picture>
+              <source srcset="content/img/hero.webp" type="image/webp">
+              <source srcset="content/img/hero.png" type="image/png">
+              <img
+                src="content/img/hero.png"
+                alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+                class="hero-img"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -645,7 +659,7 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2022 by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="compyright-year"></span> by Omnifood, Inc. All rights reserved.
           </p>
         </div>
         <div class="address-col">
